--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,15 @@
             <version>3.0.3</version>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+        
+        
     </dependencies>
 
     <build>
