新增用户增加性别和生日 -> 演示MyBatis/Jackson使用枚举

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
-
+    default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
 
 blog:
   config:
