打印执行sql语句日志

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,6 +10,11 @@ mybatis:
     map-underscore-to-camel-case: true
     default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
 
+logging:
+  level:
+    com.qnxy.blog.mapper: debug
+
+
 blog:
   config:
     ex:
